002: Made changes to the way I calculated the pay amounts, added reading in from a file, storing the read in info in a dictionary, and adding code to output a file as requested in the exercise.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 EmployeesInfo/.vs/
 EmployeesInfo/EmployeesInfo/bin/
 EmployeesInfo/EmployeesInfo/obj/
+EmployeesInfo/EmployeesInfoStep_01_Output.txt
+EmployeesInfo/EmployeesInfo/Step_01_Output.txt
