003 - Adding code for Steps two and three. I forgot to commit the changes for step last night but this shouls be the latest and greatest code.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ EmployeesInfo/EmployeesInfo/bin/
 EmployeesInfo/EmployeesInfo/obj/
 EmployeesInfo/EmployeesInfoStep_01_Output.txt
 EmployeesInfo/EmployeesInfo/Step_01_Output.txt
+EmployeesInfo/EmployeesInfo/Step_02_Output.txt
+EmployeesInfo/EmployeesInfo/Step_03_Output.txt
